# ChangeLog for sys-apps/portage
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-apps/portage/ChangeLog,v 1.971 2012/02/23 06:08:11 zmedico Exp $

*portage-2.2.0_alpha89 (23 Feb 2012)

  23 Feb 2012; Zac Medico <zmedico@gentoo.org> +portage-2.2.0_alpha89.ebuild:
  2.2.0_alpha89 version bump. This includes all of the fixes in
  portage-2.1.10.49. Bug #210077 tracks all bugs fixed since portage-2.1.x.

*portage-2.1.10.49 (23 Feb 2012)

  23 Feb 2012; Zac Medico <zmedico@gentoo.org> +portage-2.1.10.49.ebuild:
  2.1.10.49 version bump. This fixes bug #384397 (remove orphan symlinks to
  directories) and bug #405327 (erroneous rename of absolute symlink to
  symlink.bz2). Bug #402213 tracks all bugs fixed since portage-2.1.10.44.

  23 Feb 2012; Zac Medico <zmedico@gentoo.org> -portage-2.1.10.41.ebuild,
  -portage-2.1.10.46.ebuild, -portage-2.2.0_alpha86.ebuild:
  Remove old versions.

  21 Feb 2012; Zac Medico <zmedico@gentoo.org> portage-2.1.10.46.ebuild,
  portage-2.1.10.48.ebuild:
  Bug #402215: Re-add ~alpha, ~m68k, ~mips, and ~s390 keywords, since the
  corresponding arch profiles now have USE=xattr masked for sys-apps/portage,
  pending ~arch keywords for dev-python/pyxattr.

  20 Feb 2012; Zac Medico <zmedico@gentoo.org> portage-2.2.0_alpha88.ebuild:
  Fix SRC_URI.

*portage-2.2.0_alpha88 (20 Feb 2012)

  20 Feb 2012; Zac Medico <zmedico@gentoo.org> +portage-2.2.0_alpha88.ebuild,
  -portage-2.2.0_alpha87.ebuild:
  2.2.0_alpha88 version bump. This includes all of the fixes in
  portage-2.1.10.48. Bug #210077 tracks all bugs fixed since portage-2.1.x.

*portage-2.1.10.48 (20 Feb 2012)

  20 Feb 2012; Zac Medico <zmedico@gentoo.org> +portage-2.1.10.48.ebuild,
  -portage-2.1.10.47.ebuild:
  2.1.10.48 version bump. This fixes bug #404995 (regression in 2.1.10.47 and
  2.2.0_alpha87 which causes an infinite loop in emerge when parallel-fetch is