@@ -4,8 +4,7 @@ DIST portage-2.2.0_alpha88.tar.bz2 803852 RMD160 9c6a87c2a8de996286e74245faeaacf
 DIST portage-2.2.0_alpha89.patch.bz2 4205 RMD160 ff17958771ee571ccc45604682882356d2d54e5e SHA1 bf5ed24e13f89bcad128e8773f40ceea8bbd8ed2 SHA256 677bc5cce25723cefbdb8f147ac6fc7162d541eb0a149fbd1b96d79f4b2a07d1
 DIST portage-man-pl-2.1.2.tar.bz2 53893 RMD160 46c3656b40bf4ad2530ab2b5fbc563708b86748c SHA1 c3151e0b330c589625830e54053fbc676b2c64de SHA256 960eaa7c6f3a2af44bdc665266a8e884628a562373cc477d301597ecc5ef961f
 EBUILD portage-2.2.0_alpha84.ebuild 14659 RMD160 09e616348d4c80ad061b38ec39c3f4f1a441fdc0 SHA1 6ff7a8994c633913d4fb8b9a028cd206d5d20731 SHA256 2ef692472862dd8d2089824ee5f810bf0899743a19702501012fc5dad34c9c49
-EBUILD portage-2.2.0_alpha88.ebuild 15740 RMD160 9b2f4822859fe59330ca49c4b98cfd4d51085209 SHA1 659d37f801fc4d54e10a7dd5f058963a7e91c1b1 SHA256 cf49bb9dd4f4be76bfd4a4124c099c104982712c9e1b5947fe2e2b5702edab4e
 EBUILD portage-2.2.0_alpha89.ebuild 15740 RMD160 488c3ae4e6afb1fc1c03fe746466e0fbdb4f0770 SHA1 1ccc3403ec313a21a0016f79b2c11eca5f7235d6 SHA256 c0b562a3f7b52f202e4c0e7b814ad3de869c22a3e9e7429d7858909e136baf08
 EBUILD portage-9999.ebuild 14905 RMD160 caa6edf5be721c9ff5d02a5799f9d59fa1bd8fc8 SHA1 454cc9eb2d48c73eb946d58c63e3423a57411c23 SHA256 1bb6f9cf4c79f115464230ebf56f1e4b21f58b3dd9738f64d7674e2df83d383f
-MISC ChangeLog 80264 RMD160 e66e0e048b9b6e8eeb7786118acfc8cbfefb3e73 SHA1 218f71ab01d4b007c8ffd5a9e834b3cb490851f8 SHA256 26a061e7aec452caa34d8ef139481d7c27ad185e5519f6a680b5577a8861a48e
+MISC ChangeLog 80395 RMD160 3d86f7bf3de2b6dafb18bd23c2acf15ae7e7185e SHA1 127d4ee612641c716ff5f4f88ab6e5742721a38f SHA256 492596984c2772908dcff7890518937fe85f66b912f2f6ff705b755608b3674e
 MISC metadata.xml 926 RMD160 9fd2d499d8102a870e45e63ec68400d71de950c6 SHA1 83f8455f45d0baaedcbbd3fc0186cccad54af7b9 SHA256 2609962ab6a20df40f95053513e6aca76b24caee81e7b3f45de7e3c7e33eec25
