@@ -1,6 +1,10 @@
 # ChangeLog for sys-apps/portage
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/portage/ChangeLog,v 1.971 2012/02/23 06:08:11 zmedico Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/portage/ChangeLog,v 1.972 2012/03/01 09:09:28 zmedico Exp $
+
+  01 Mar 2012; Zac Medico <zmedico@gentoo.org> -portage-2.1.10.48.ebuild,
+  -portage-2.2.0_alpha88.ebuild:
+  Remove old versions.
 
 *portage-2.2.0_alpha89 (23 Feb 2012)
 
